<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spotxchange.testapp.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/spotxGreen"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.CustomToolbarTheme"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tabLayout"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/spotxBlack"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/spotxGreen"
        app:tabMaxWidth="0dp"
        app:tabSelectedTextColor="@color/spotxGreen"
        app:tabTextColor="@color/spotxWhite"
        android:id="@+id/tabLayout">

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_tab_sdk"
            android:text="@string/tab_sdk" />

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_tab_mopub"
            android:text="@string/tab_mopub" />

        <android.support.design.widget.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_tab_brightcove"
            android:text="@string/tab_brightcove" />
    </android.support.design.widget.TabLayout>

</RelativeLayout>
