<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spotxchange.testapp.BrightcoveFragment">

    <CheckBox
        android:id="@+id/vpaidBox"
        android:saveEnabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adTypeSelection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/vpaid"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/channelText"
        android:saveEnabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/vpaidBox"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:enabled="true"
        android:gravity="center"
        android:hint="@string/channel_id"
        android:inputType="number"
        android:lines="1" />

    <TextView
        android:id="@+id/channelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/channelText"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/channel_id" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/channelId"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/playButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/play" />
    </RelativeLayout>

</RelativeLayout>